--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -4,8 +4,13 @@
 
 "Yan":
   - firstname: ["Zihan"]
-    url: https://twitter.com/YyyZihan
+    url: https://twitter.com/yzihan_hci
 
 "Viswanath":
   - firstname: ["Tejas"]
     url: https://www.linkedin.com/in/tejasviswa/
+
+
+"Li":
+  - firstname: ["Tianxing"]
+    url: https://tianxing.me/
